--- a/AutoSchedule/Views/TaskPlan/TaskPlanEdit.cshtml
+++ b/AutoSchedule/Views/TaskPlan/TaskPlanEdit.cshtml
@@ -80,7 +80,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">Api地址</label>
             <div class="layui-input-block">
-                <input type="text" name="TaskUrl" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
+                <input type="text" name="TaskUrl" lay-verify="required" autocomplete="off" placeholder="" class="layui-input" value="@Model.TaskUrl">
             </div>
         </div>
 
