--- a/AutoSchedule/Views/DataSource/DataSourceAdd.cshtml
+++ b/AutoSchedule/Views/DataSource/DataSourceAdd.cshtml
@@ -73,7 +73,7 @@
 
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button type="button" class="layui-btn" lay-submit="" lay-filter="ensure">立即提交</button>
+                <button type="button" class="layui-btn" lay-submit="" lay-filter="ensure">提交</button>
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
