--- a/AutoSchedule/Views/TaskPlan/TaskPlanAdd.cshtml
+++ b/AutoSchedule/Views/TaskPlan/TaskPlanAdd.cshtml
@@ -74,7 +74,7 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button type="button" class="layui-btn" lay-filter="enSure" lay-submit="">确定</button>
-                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                <button type="reset" class="layui-btn layui-btn-primary">取消</button>
             </div>
         </div>
     </form>
