--- a/AutoSchedule/Views/DataSource/DataSourceAdd.cshtml
+++ b/AutoSchedule/Views/DataSource/DataSourceAdd.cshtml
@@ -72,13 +72,14 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button type="button" class="layui-btn" lay-submit="" lay-filter="ensure">提交</button>
-                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                <button type="reset" class="layui-btn" onclick="formClose()">取消</button>
             </div>
         </div>
     </form>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/layui.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/js/bank.js"></script>
+
     <script type="text/javascript">
         layui.use(['form', 'layedit', 'laydate'], function () {
             var form = layui.form
@@ -112,8 +113,6 @@
                         setTimeout(function () { parent.location.reload() }, 100);
                     }
                 });
-                //window.parent.location.reload();
-
             });
 
         });
