--- a/AutoSchedule/Views/Home/Index.cshtml
+++ b/AutoSchedule/Views/Home/Index.cshtml
@@ -9,13 +9,15 @@
         <button class="layui-btn layui-btn-lg layui-btn-radius layui-btn-normal" id="begin">开启以上定时任务</button>
         <button class="layui-btn layui-btn-lg layui-btn-radius layui-btn-danger" id="stop">停止以上定时任务</button>
     </div>
-    
+
     <div class="alert"></div>
 </div>
-<script src="~/layui.js"></script>
+
+<script src="~/js/bank.js"></script>
 <script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/layui.js"></script>
 <script type="text/javascript">
-    
+
 </script>
 <style type="text/css">
 
