--- a/AutoSchedule/Views/Organization/OrgAdd.cshtml
+++ b/AutoSchedule/Views/Organization/OrgAdd.cshtml
@@ -10,8 +10,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="~/css/layui.css" rel="stylesheet" />
-    <script src="~/layui.js"></script>
     <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/layui.js"></script>
+    <script src="~/js/bank.js"></script>
     <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
 </head>
 <body>
@@ -74,7 +75,7 @@
             <div class="layui-input-block">
                 <button type="button" class="layui-btn" lay-filter="SqlHelper" lay-submit="">测试连接</button>
                 <button type="button" class="layui-btn" lay-filter="enSure" lay-submit="">确定</button>
-                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                <button type="reset" class="layui-btn" onclick="formClose()">取消</button>
             </div>
         </div>
     </form>
