--- a/AutoSchedule/Views/SystemKey/SystemKeyEdit.cshtml
+++ b/AutoSchedule/Views/SystemKey/SystemKeyEdit.cshtml
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="~/css/layui.css" rel="stylesheet" />
+
 </head>
 <body>
 
@@ -36,13 +37,14 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button type="button" class="layui-btn" lay-filter="enSure" lay-submit="">确定</button>
-                <button type="reset" class="layui-btn layui-btn-primary">取消</button>
+                <button type="reset" class="layui-btn" onclick="formClose()">取消</button>
             </div>
         </div>
     </form>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/layui.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/js/bank.js"></script>
+
     <script type="text/javascript">
         layui.use(['form', 'layedit', 'laydate'], function () {
             var form = layui.form
